--- a/src/index.scss
+++ b/src/index.scss
@@ -171,120 +171,120 @@ nav {
 }
 
 /* Using SCSS variables to store breakpoints */
-$breakpoint-tablet: 375px;
-@media (max-width: $breakpoint-tablet) {
-  nav {
-    // display: none;
-  }
-  .container {
-    flex-direction: column-reverse;
-    gap: 5px;
-  }
+// $breakpoint-tablet: 375px;
+// @media (max-width: $breakpoint-tablet) {
+//   nav {
+//     // display: none;
+//   }
+//   .container {
+//     flex-direction: column-reverse;
+//     gap: 5px;
+//   }
 
-  .img-content {
-    width: 350px;
-  }
-  .image {
-    margin: 20px;
-  }
+//   .img-content {
+//     width: 350px;
+//   }
+//   .image {
+//     margin: 20px;
+//   }
 
-  .container {
-    .content {
-      width: 90%;
-      margin: auto;
-      h1 {
-        font-size: 20px;
-        width: 100%;
-      }
+//   .container {
+//     .content {
+//       width: 90%;
+//       margin: auto;
+//       h1 {
+//         font-size: 20px;
+//         width: 100%;
+//       }
 
-      p {
-        width: 120%;
-        margin: auto;
-      }
+//       p {
+//         width: 120%;
+//         margin: auto;
+//       }
 
-      button {
-        margin: auto;
-        width: 40%;
-      }
-    }
-  }
+//       button {
+//         margin: auto;
+//         width: 40%;
+//       }
+//     }
+//   }
 
-  .sub-content {
-    width: 150%;
-    position: absolute;
-    bottom: 0px;
-    top: 730px;
-    left: 70px;
-  }
-  // .drawer {
-  //   border: solid;
-  //   // float: left;
-  //   // display: flex;
-  //   // justify-content: end;
+//   .sub-content {
+//     width: 150%;
+//     position: absolute;
+//     bottom: 0px;
+//     top: 730px;
+//     left: 70px;
+//   }
+//   // .drawer {
+//   //   border: solid;
+//   //   // float: left;
+//   //   // display: flex;
+//   //   // justify-content: end;
 
-  //   width: 70%;
-  //   height: 780px;
+//   //   width: 70%;
+//   //   height: 780px;
 
-  //   position: absolute;
-  //   // top: 0px;
-  //   // left: 0px;
-  //   // right: 100px;
-  //   background:red;
-  //   z-index: 100;
-  //   margin-left: 150px;
-  //   position: absolute;
-  //   right: 0px;
-  // }
-  // box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
+//   //   position: absolute;
+//   //   // top: 0px;
+//   //   // left: 0px;
+//   //   // right: 100px;
+//   //   background:red;
+//   //   z-index: 100;
+//   //   margin-left: 150px;
+//   //   position: absolute;
+//   //   right: 0px;
+//   // }
+//   // box-shadow: 3px 3px 10px 6px rgba(0, 0, 0, 0.06);
 
-  img {
-    margin: 40px 10px 4px 40px;
+//   img {
+//     margin: 40px 10px 4px 40px;
 
-    float: right;
-    z-index: 2;
-  }
+//     float: right;
+//     z-index: 2;
+//   }
 
-  .option {
-    display: none;
-  }
+//   .option {
+//     display: none;
+//   }
 
-  ul {
-    // background: red;
-    flex-direction: column;
+//   ul {
+//     // background: red;
+//     flex-direction: column;
 
-    width: 50%;
-    // height: 780px;
+//     width: 50%;
+//     // height: 780px;
 
-    // position: absolute;
-    // top: 40px;
-    // left: 0px;
+//     // position: absolute;
+//     // top: 40px;
+//     // left: 0px;
    
-    background: red;
-    z-index: 1;
+//     background: red;
+//     z-index: 1;
    
-    // position: absolute;
-  }
-  .container {
+//     // position: absolute;
+//   }
+//   .container {
  
  
-  }
+//   }
 
-.navbar {
-    flex-direction: column;
-    // border: solid;
-    position: absolute;
-    left: 90px;
+// .navbar {
+//     flex-direction: column;
+//     // border: solid;
+//     position: absolute;
+//     left: 90px;
 
-  }
-  .hamburger {
-    display: block;
+//   }
+//   .hamburger {
+//     display: block;
   
-  border: solid;
+//   border: solid;
 
  
   
    
-  }
-}
+//   }
+// }
 
 //  drawer
